# tools

./: .emacs  bashrc  bashrc.md  emacs
cmake/001/: CMakeLists.txt  configure.in.h
makefile/: README.md
makefile/001/: Makefile  Makefile~  main.c  my_echo.c  my_echo.h
makefile/003/: Makefile  main.c  sub.h.gch
makefile/004/: Makefile  Makefile~  hoge
makefile/005/: Makefile
makefile/006/: Makefile  main.c  parse.c  parse.h  sub.d  sub_a.h  sub_ab.c  sub_b.h
makefile/007/: Makefile
makefile/007/include/codec/: codec.h
makefile/007/lib/codec/: Makefile
makefile/007/lib/ui/: Makefile
makefile/008/: Makefile  main.c
makefile/008/lib/: Makefile  libA.c  libB.c  libC.c
makefile/008/lib/include/: libA.h  libA.h~  libB.h  libB.h~  libC.h  libC.h~
makefile/base_template/: Makefile
makefile/old/002/: Makefile  sub.c
makefile/old/003/: Makefile  sub.h
makefile/old/004/: Makefile
makefile/tmp/: Makefile  main.c
makefile/tmp/include/ui/: ui.h
makefile/tmp/lib/codec/: Makefile  codec.c
makefile/tmp/lib/ui/: ui.c
makefile/work/: Makefile
powershell/: checksum.ps1  main.ps1
powershell/Gui/: Gui.psm1
powershell/IO-File/: IO-File.psm1
